--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,9 @@
 .app-container {
     display: block;
     overflow-x: hidden;
-    position: absolute; top: 0; left: 0; height: 100%; width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
 }
