Revert to the default (empty) layout for the AccountConfiguration component

--- a/src/app/account-configuration/account-configuration.component.html
+++ b/src/app/account-configuration/account-configuration.component.html
@@ -8,3 +8,50 @@
     </div>
   </div>
 </div>
+
+<!-- <table>
+  <tbody>
+    <tr class="row">
+      <td class="col l3 xl3">Check node existence</td>
+      <td class="col l9 xl9">Eclair</td>
+    </tr>
+    <tr class="row">
+      <td>Recreate node tree</td>
+      <td>Jellybean</td>
+    </tr>
+    <tr class="row">
+      <td>Recreate account</td>
+      <td>Lollipop</td>
+    </tr>
+    <tr class="row">
+      <td>Change password</td>
+      <td>Lollipop</td>
+    </tr>
+    <tr class="row">
+      <td>Transfer congifuration from ERP</td>
+      <td>Lollipop</td>
+    </tr>
+  </tbody>
+</table> -->
+
+<!-- <div class="row">
+  <div class="col l12">Check node existence</div>
+</div>
+<div class="row">
+  <div class="col l3">Recreate node tree</div>
+</div>
+<div class="row">
+  <div class="col l3">Recreate account</div>
+</div>
+<div class="row">
+  <div class="col l3">Change password</div>
+</div>
+<div class="row">
+  <div class="col l3">Transfer configuration from ERP</div>
+</div> -->
+
+<!-- Check node existence
+Recreate node tree
+Recreate account
+Change password
+Transfer configuration from ERP -->
