--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
     <!-- <div class="left-panel col l3 deep-orange accent-4">WTF left</div> -->
     <!-- <div class="left-panel col l9 green accent-4">WTF right</div> -->
 
-    <div class="left-panel col m2 l3">
+    <div class="left-panel col s1 m1 l3">
       <app-sidebar [contentLoader]="contentLoader"></app-sidebar>
     </div>
-    <div class="right-panel col m10 l9">
+    <div class="right-panel col s11 m11 l9">
         <app-content-loader #contentLoader></app-content-loader>
     </div>
 
