--- a/src/app/settings/settings.component.css
+++ b/src/app/settings/settings.component.css
@@ -1,3 +1,12 @@
-p>label {
+p > label {
   color: unset !important;
 }
+
+div > i {
+  vertical-align: middle;
+}
+
+div > .text {
+  vertical-align: middle;
+}
+
