--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,8 +1,10 @@
-<ul class="collapsible">
-  <li *ngFor="let item of items" (click)="selectItem(item)">
-    <div class="collapsible-header">
-      <i class="small material-icons">{{item.icon}}</i>
-      {{item.name}}
-    </div>
-  </li>
-</ul>
+<img class="responsive-img hide-on-med-and-down" src="assets/images/logo.png">
+
+<div class="collection">
+  <a class="collection-item waves-effect waves-light" *ngFor="let item of items; let first = first; let last = last" [ngClass]="{active : item == selectedItem}" (click)="selectItem(item)">
+    <i class="small material-icons">{{item.icon}}</i>
+    &nbsp;
+    <span class="text hide-on-med-and-down">{{item.name}}</span>
+  </a>
+</div>
+
