--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,21 @@ body {
   transform: translate(-50%, -50%) !important;
   text-align: center !important;
 }
+
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+::-webkit-scrollbar-track {
+  background: #e0f2f1; 
+  border-radius: 0.5em
+}
+
+::-webkit-scrollbar-thumb {
+  background: #80cbc4; 
+  border-radius: 0.5em;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #009688; 
+}
