implements the "About" component

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,7 +2,7 @@
   <li class="collection-header">
     Midori
   </li>
-  <li class="collection-item">Version XX.YY.ZZ</li>
+  <li class="collection-item">Version {{appVersion}}</li>
   <li class="collection-item">Developed by Bamboo</li>
 </ul>
 
