Add the pulse effect for the login in the "sidebar" component

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -16,3 +16,14 @@ a > .text {
   color: black;
   vertical-align: middle;
 }
+
+.pulse:hover{
+  animation: pulse 0.3s ease-in infinite;
+  cursor: pointer;
+}
+
+@keyframes pulse{
+  25%  {transform: scale(0.95);}
+  75%  {transform: scale(1.05);}
+}
+
