--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<img class="responsive-img hide-on-med-and-down" src="assets/images/logo.png">
+<img class="responsive-img hide-on-med-and-down pulse" src="assets/images/logo.png">
 
 <div class="collection">
   <a class="collection-item waves-effect waves-light" *ngFor="let item of items; let first = first; let last = last" [ngClass]="{active : item == selectedItem}" (click)="selectItem(item)">
