--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,7 +20,7 @@
 .left-panel {
   display: block;
   overflow-x: hidden;
-  position: relative;
+  position: fixed;
   top: 0;
   left: 0;
   /* height: -webkit-fill-available !important; */
