--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,29 +1,73 @@
 <div class="row">
   <div>
-    <i class="material-icons prefix">account_circle</i>&nbsp;<span class="text">Account</span>
+    <i class="material-icons prefix">account_circle</i>&nbsp;
+    <span class="text">Account</span>
   </div>
-  <div class="input-field col m6 l6">
+</div>
+<div class="row">
+  <div class="col m8 l6">
     <input name="accountIdTxt" id="icon_prefix" type="number" class="validate" [(ngModel)]="selectedAccountId" required ng-maxlength="8">
   </div>
 </div>
-
+<div class="row"></div>
 <div class="row">
   <div>
-    <i class="material-icons prefix">dns</i>&nbsp;<span class="text">Environment</span>
+    <i class="material-icons prefix">cloud</i>&nbsp;
+    <span class="text">Environment</span>
   </div>
-  <p *ngFor="let environment of environments">
-    <label>
+</div>
+<div class="row">
+  <p>
+    <label *ngFor="let environment of environments">
       <input name="envgroup" type="radio" (click)="setEnvironment(environment)" [checked]="environment == selectedEnvironment" />
       <span>{{environment}}</span>
     </label>
   </p>
 </div>
-<!-- <div class="row">
-  <ul class="collection">
-    <li class="collection-item">Selected account: {{selectedAccountId}}</li>
-    <li class="collection-item">Selected environment: {{selectedEnvironment}}</li>
-  </ul>
-</div> -->
+<div class="row"></div>
 <div class="row">
-  <a class="btn" (click)="saveSettings()">Apply</a>
+  <div>
+    <i class="material-icons prefix">storage</i>&nbsp;
+    <span class="text">Database connections</span>
+    &nbsp;
+    <div class="chip">
+      {{selectedEnvironment}}
+    </div>
+  </div>
+</div>
+<div class="row">
+  <table class="highlight">
+    <thead>
+      <tr>
+        <th>Schema</th>
+        <th>Connection string</th>
+        <th>Username</th>
+        <th>Password</th>
+        <th></th>
+        <th class="last"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>ERP_ACCESS</td>
+        <td><input type="text" class="validate" [(ngModel)]="erpConnectionString" required ></td>
+        <td><input type="text" class="validate" [(ngModel)]="erpUser" required ></td>
+        <td><input type="password" class="validate" [(ngModel)]="erpPassword" required ></td>
+        <td class="test-btn"><a class="waves-effect waves-light btn">Test</a></td>
+        <td class="last"><img src="assets/images/ball.gif" alt="" class="responsive-img loading"></td>
+      </tr>
+      <tr>
+        <td>TD_ACCESS</td>
+        <td><input type="text" class="validate" [(ngModel)]="tdConnectionString" required ></td>
+        <td><input type="text" class="validate" [(ngModel)]="tdUser" required ></td>
+        <td><input type="password" class="validate" [(ngModel)]="tdPassword" required ></td>
+        <td class="test-btn"><a class="waves-effect waves-light btn">Test</a></td>
+        <td class="last"><img src="assets/images/ball.gif" alt="" class="responsive-img loading"></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="row">
+  <a class="btn" (click)="saveSettings()">Apply</a><img src="assets/images/ball.gif" alt="" [ngClass]="{'loading': isSettingsSaving, 'resting': !isSettingsSaving}" class="responsive-img">
 </div>
